app.yml
apiVersion: v1
kind: Pod
metadata:
  name: short-link
  labels:
    components: front
spec:
  containers:
    - name: short-link
      image: bazdoc/short-app:latest
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: "128Mi"
          cpu: "300m"
