app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: short-link-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: front
